<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#FAF0FF">
	<FrameLayout
		android:id="@+id/frameLayoutHelp"
		android:layout_width="fill_parent"
		android:layout_height="60dip"
		android:layout_alignParentTop="true">
		<ImageView
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:src="@drawable/ic_option_dialog_header"
			android:scaleType="fitXY"/>
		<TextView
			android:id="@+id/textViewHelpTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|left"
			android:layout_marginLeft="15dip"
			android:textColor="#545454"
			android:textStyle="bold"
			android:textSize="30dip"
			android:text="@string/help"/>
	</FrameLayout>

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/frameLayoutHelp"
		android:layout_marginTop="15dip"
		android:layout_marginLeft="15dip">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<!-- Edit -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="20dip"
				android:text="@string/help_picture_edit_title"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:layout_marginBottom="5dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_new_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_new_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_camera_import_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_camera_import_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_gallery_import_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_gallery_import_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_move_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_move_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_rotate_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_rotate_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_zoom_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_zoom_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_pinch_zoom_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_edit_pinch_zoom_body"/>
			
			<!-- Tools -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="20dip"
				android:text="@string/help_picture_tools_title"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_body"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:layout_marginBottom="5dip"/>	
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_pencil_draw_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_pencil_draw_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_line_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_line_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_text_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_text_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_shake_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_shake_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_rectangle_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_rectangle_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_circle_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_circle_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_fill_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_tools_fill_body"/>	
			
			<!-- Effects -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="20dip"
				android:text="@string/help_picture_effects_title"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_body"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:layout_marginBottom="5dip"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_grayscale_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_grayscale_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_saturation_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_saturation_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_transparency_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_transparency_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_contrast_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_contrast_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_brightness_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_brightness_body"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textStyle="bold"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_negative_subtitle"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="#545454"
				android:textSize="15dip"
				android:text="@string/help_picture_effects_negative_body"/>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>
