<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#FAF0FF">
	
	
	<FrameLayout
		android:id="@+id/frameLayoutColor"
		android:layout_width="fill_parent"
		android:layout_height="60dip"
		android:layout_alignParentTop="true">
		<ImageView
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:src="@drawable/ic_option_dialog_header_rounded"
			android:scaleType="fitXY"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|left"
			android:layout_marginLeft="15dip"
			android:text="@string/dialog_color_title"
			android:textColor="#e5e5e5"
			android:textStyle="bold"
			android:textSize="30dip"/>
	</FrameLayout>
	
	
	<RelativeLayout
		android:id="@+id/linearLayoutColorButtons"
		android:layout_width="fill_parent"
		android:layout_height="70dip"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal"
		android:paddingTop="5dip"
		android:background="@drawable/ic_button_container_background">
		<TableLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="3dip"
			android:stretchColumns="1">
			<TableRow>
				<Button
					android:id="@+id/buttonColorOk"
					android:layout_width="0dip"
					android:layout_height="50dip"
					android:layout_gravity="left"
					android:layout_alignParentLeft="true"
					android:layout_weight="1"
					android:layout_margin="4dip"
					android:text="@string/button_ok"
					android:textColor="#e5e5e5"
					android:drawableLeft="@drawable/ic_button_accept"
					android:background="@drawable/button_option"/>
				<Button
					android:id="@+id/buttonColorCancel"
					android:layout_width="0dip"
					android:layout_height="50dip"
					android:layout_gravity="right"
					android:layout_alignParentRight="true"
					android:layout_weight="1"
					android:layout_margin="4dip"
					android:text="@string/button_cancel"
					android:textColor="#e5e5e5"
					android:drawableRight="@drawable/ic_button_decline"
					android:background="@drawable/button_option"/>			
			</TableRow>
		</TableLayout>

	</RelativeLayout>

<!-- 
	<RelativeLayout
		android:id="@+id/linearLayoutColorButtons"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal"
		android:paddingTop="5dip"
		android:background="#000000">
		<Button
			android:id="@+id/buttonColorOk"
			android:layout_width="100dip"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:layout_alignParentLeft="true"
			android:text="@string/button_ok"
			android:textColor="#e5e5e5"
			android:drawableLeft="@drawable/ic_button_accept"
			android:background="@drawable/button_option"/>
		<Button
			android:id="@+id/buttonColorCancel"
			android:layout_width="100dip"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:layout_alignParentRight="true"
			android:text="@string/button_cancel"
			android:textColor="#e5e5e5"
			android:drawableRight="@drawable/ic_button_decline"
			android:background="@drawable/button_option"/>
	</RelativeLayout>
-->

<!-- 
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:layout_below="@id/frameLayoutColor"
		android:layout_above="@id/linearLayoutColorButtons">
		<FrameLayout
			android:layout_width="fill_parent"
			android:layout_height="210dip"
			android:layout_gravity="center">
			<ImageView
				android:layout_width="50dip"
				android:layout_height="50dip"
				android:layout_gravity="right|top"
				android:layout_marginTop="5dip"
				android:layout_marginRight="10dip"
				android:background="#FF000000"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dip"
				android:layout_gravity="left|top"
				android:text="#AABBCCDD"/>	
			<ImageView
				android:id="@+id/imageViewColorCircle"
				android:layout_width="200dip"
				android:layout_height="200dip"
				android:layout_below="@id/frameLayoutColor"
				android:layout_gravity="center_horizontal"
				android:scaleType="fitXY"
				android:src="@drawable/ic_color_circle"
				android:layout_margin="5dip"/>
		</FrameLayout>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="Volume:"/>
	</LinearLayout>
 -->	
 
	<ScrollView
	 	android:layout_height="fill_parent"
	 	android:layout_width="fill_parent"
	 	android:layout_below="@id/frameLayoutColor"
		android:layout_above="@id/linearLayoutColorButtons">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">
			<FrameLayout
				android:id="@+id/frameLayoutColorSettings"
				android:layout_width="fill_parent"
				android:layout_height="210dip"
				android:layout_alignParentTop="true"
				android:layout_gravity="center">
				<ImageView
					android:id="@+id/imageViewColorPreview"
					android:layout_width="50dip"
					android:layout_height="50dip"
					android:layout_gravity="left|bottom"
					android:layout_marginTop="5dip"
					android:layout_marginBottom="5dip"
					android:layout_marginLeft="10dip"
					android:background="#00000000"/>
				<TextView
					android:id="@+id/textViewColor"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="5dip"
					android:layout_gravity="left|top"/>	
				<ImageView
					android:id="@+id/imageViewColorCircle"
					android:layout_width="200dip"
					android:layout_height="200dip"
					android:layout_gravity="center_horizontal"
					android:scaleType="fitXY"
					android:src="@drawable/ic_color_circle"
					android:layout_margin="5dip"/>
			</FrameLayout>
			
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="15dip"
					android:text="@string/dialog_color_volume"/>
				<SeekBar
					android:id="@+id/seekBarVolume"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="15dip"
					android:layout_marginRight="15dip"
					android:background="@drawable/seekbar_normal_background"
					android:progressDrawable="@color/transparent"
					android:thumb="@drawable/seekbar_normal_thumb"
					android:max="100"/>
				
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="15dip"
					android:text="@string/dialog_color_alpha"/>
		
				<SeekBar
					android:id="@+id/seekBarAlpha"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="15dip"
					android:layout_marginRight="15dip"
					android:background="@drawable/seekbar_normal_background"
					android:progressDrawable="@color/transparent"
					android:thumb="@drawable/seekbar_normal_thumb"
					android:max="255"/>			
			</LinearLayout>
				
		</LinearLayout>
	</ScrollView>
</RelativeLayout>
